# ticket-analyst-agent

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: agent.py  config.py  db.py  main.py  models.py
backend/tests/: test_db.py
db/: init.sql
frontend/: Dockerfile  nginx.conf
frontend/src/: App.css  App.tsx
